<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main"
        android:id="@+id/layRGroup"
        android:background="@android:color/holo_blue_light">
        <RelativeLayout
            android:id="@+id/mainScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff5544"
            android:visibility="gone"
            android:paddingLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <TextView android:text="@string/fav" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/favourites"
                android:textSize="24dp"
                android:textColor="@android:color/background_dark"/>
            <TextView
                android:id="@+id/music"
                android:background="#ffeeaa"
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:text="@string/music"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/addFav"
                android:layout_alignLeft="@+id/favourites"
                android:layout_alignStart="@+id/favourites" />
            <TextView
                android:id="@+id/films"
                android:background="#aaeeff"
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:text="@string/films"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/share"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/series"
                android:background="#eeffaa"
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:text="@string/series"
                android:layout_height="wrap_content"
                android:layout_marginTop="57dp"
                android:layout_below="@+id/share"
                android:layout_alignLeft="@+id/films"
                android:layout_alignStart="@+id/films" />
            <Button
                android:id="@+id/addFav"
                android:drawableLeft="@drawable/add"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick=""
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/share"
                android:layout_alignStart="@+id/share" />
            <Button
                android:id="@+id/share"
                android:drawableBottom="@drawable/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick=""
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            <Button
                android:id="@+id/save"
                android:drawableLeft="@drawable/save"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick=""
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/share"
                android:layout_alignStart="@+id/share" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/chooseOp"
            android:visibility="visible"
            android:background="#dd33ff"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView android:text="@string/chooseOption" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textoRGroup"
                android:layout_centerHorizontal="true"
                android:textSize="28dp"
                android:textColor="@android:color/background_dark"/>

            <RadioGroup
                android:id="@+id/rGroup"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textoRGroup"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/musicRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music" android:padding="20dp" android:textSize="20dp"/>
                <RadioButton
                    android:id="@+id/peliculasRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/films" android:padding="20dp" android:textSize="20dp"/>
                <RadioButton
                    android:id="@+id/seriesRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/series" android:padding="20dp" android:textSize="20dp"/>
                <RadioButton
                    android:id="@+id/gamesRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games" android:padding="20dp" android:textSize="20dp"/>
            </RadioGroup>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bContinuar"
                android:onClick="continua"
                android:layout_below="@+id/rGroup"
                android:layout_toRightOf="@+id/rGroup"
                android:layout_toEndOf="@+id/rGroup"
                android:layout_marginTop="63dp" />
            <Button
                android:id="@+id/back1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bBack"
                android:onClick=""
                android:layout_alignTop="@+id/next"
                android:layout_toLeftOf="@+id/rGroup"
                android:layout_toStartOf="@+id/rGroup" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <TextView android:text="@string/cat" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/categories"
                android:textSize="28dp"
                android:textColor="@android:color/background_dark"/>
            <Spinner
                android:id="@+id/spinnerCategories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/categories"
                android:drawSelectorOnTop="true">
            </Spinner>
            <Button
                android:id="@+id/back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bBack"
                android:onClick=""
                android:layout_marginBottom="32dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/layList"
            android:layout_width="fill_parent"
            android:layout_height="500dp"
            android:visibility="gone">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listItems"
                android:textSize="28dp"
                android:textColor="@android:color/background_dark"/>
            <ListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            </ListView>
            <Button
                android:id="@+id/back3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bBack"
                android:onClick=""
                android:layout_marginBottom="32dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>